--- a/package.json
+++ b/package.json
@@ -7,7 +7,15 @@
     "dev": "vite",
     "build": "vue-tsc && vite build",
     "preview": "vite preview",
-    "type-check": "vue-tsc --noEmit"
+    "type-check": "vue-tsc --noEmit",
+    "version:patch": "node scripts/version-manager.js patch",
+    "version:minor": "node scripts/version-manager.js minor",
+    "version:major": "node scripts/version-manager.js major",
+    "version:custom": "node scripts/version-manager.js custom",
+    "release:patch": "./scripts/quick-release.sh patch",
+    "release:minor": "./scripts/quick-release.sh minor",
+    "release:major": "./scripts/quick-release.sh major",
+    "test:release": "./scripts/test-release.sh"
   },
   "dependencies": {
     "vue": "^3.4.21",
