--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -56,10 +56,13 @@ jobs:
         if git show-ref --verify --quiet refs/remotes/origin/release; then
           echo "Release branch exists, switching to it"
           git checkout -B release origin/release
+          # 清空release分支的內容，但保留.git目錄
+          git rm -rf . 2>/dev/null || true
         else
           echo "Release branch does not exist, creating it"
           git checkout --orphan release
-          git rm -rf .
+          # 清空所有文件，但忽略錯誤
+          git rm -rf . 2>/dev/null || true
         fi
     
     # 步驟9: 複製構建文件到release分支
