--- a/.github/workflows/auto-release.yml
+++ b/.github/workflows/auto-release.yml
@@ -1,10 +1,10 @@
-ㄔㄛgitname: Release Build
+name: Auto Release
 
 # 觸發條件：當創建tag時執行
 on:
   push:
     tags:
-      - 'v*'  # 匹配所有以v開頭的tag，如 v1.0.0
+      - 'v*'  # 匹配所有以v開頭的tag
 
 jobs:
   build-and-deploy:
@@ -15,7 +15,7 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
       with:
-        fetch-depth: 0  # 獲取完整的git歷史
+        fetch-depth: 0
     
     # 步驟2: 設置Node.js環境
     - name: Setup Node.js
@@ -28,48 +28,42 @@ jobs:
     - name: Install dependencies
       run: npm ci
     
-    # 步驟4: 運行類型檢查
-    - name: Type check
-      run: npm run type-check
-    
-    # 步驟5: 構建項目
+    # 步驟4: 構建項目
     - name: Build project
       run: npm run build
     
-    # 步驟6: 配置Git用戶信息
+    # 步驟5: 配置Git
     - name: Configure Git
       run: |
         git config --global user.name "GitHub Actions"
         git config --global user.email "actions@github.com"
     
-    # 步驟7: 獲取tag信息
-    - name: Get tag info
-      id: tag_info
+    # 步驟6: 準備release分支
+    - name: Prepare release branch
       run: |
-        echo "tag_name=${GITHUB_REF#refs/tags/}" >> $GITHUB_OUTPUT
-        echo "tag_message=$(git tag -l --format='%(contents:subject)' ${GITHUB_REF#refs/tags/})" >> $GITHUB_OUTPUT
-    
-    # 步驟8: 切換到release分支或創建新的release分支
-    - name: Switch to release branch
-      run: |
+        TAG_NAME=${GITHUB_REF#refs/tags/}
+        echo "Processing tag: $TAG_NAME"
+        
         # 檢查release分支是否存在
         if git show-ref --verify --quiet refs/remotes/origin/release; then
-          echo "Release branch exists, switching to it"
+          echo "Release branch exists, checking it out"
+          git fetch origin release
           git checkout -B release origin/release
-          # 清空release分支的內容，但保留.git目錄
-          git rm -rf . 2>/dev/null || true
         else
           echo "Release branch does not exist, creating it"
           git checkout --orphan release
-          # 清空所有文件，但忽略錯誤
-          git rm -rf . 2>/dev/null || true
         fi
+        
+        # 清空工作目錄（保留dist目錄）
+        find . -maxdepth 1 -not -name '.git' -not -name '.' -not -name 'dist' -exec rm -rf {} + 2>/dev/null || true
     
-    # 步驟9: 複製構建文件到release分支
-    - name: Copy build files
+    # 步驟7: 複製必要文件
+    - name: Copy necessary files
       run: |
-        # 從tag複製其他文件
-        git checkout ${GITHUB_REF#refs/tags/} -- index.html package.json README.md
+        TAG_NAME=${GITHUB_REF#refs/tags/}
+        
+        # 從tag複製必要文件
+        git checkout $TAG_NAME -- index.html package.json README.md
         
         # 確保dist目錄存在
         if [ ! -d "dist" ]; then
@@ -77,57 +71,57 @@ jobs:
           exit 1
         fi
         
-        echo "Build files copied successfully"
+        echo "Files copied successfully:"
         ls -la
     
-    # 步驟10: 創建發布說明文件
+    # 步驟8: 創建發布說明
     - name: Create release notes
       run: |
+        TAG_NAME=${GITHUB_REF#refs/tags/}
         cat > RELEASE_NOTES.md << EOF
-        # Release ${GITHUB_REF#refs/tags/}
+        # Release $TAG_NAME
         
         **發布時間**: $(date -u '+%Y-%m-%d %H:%M:%S UTC')
         
-        **Tag信息**: ${{ steps.tag_info.outputs.tag_name }}
+        **Tag**: $TAG_NAME
         
-        **提交信息**: ${{ steps.tag_info.outputs.tag_message }}
-        
-        ## 構建信息
+        **構建信息**:
         - 構建時間: $(date -u '+%Y-%m-%d %H:%M:%S UTC')
         - 構建環境: GitHub Actions (Ubuntu Latest)
         - Node.js版本: $(node --version)
         - NPM版本: $(npm --version)
         
-        ## 文件結構
+        **文件列表**:
         \`\`\`
         $(find dist -type f | head -20)
         \`\`\`
         
         ## 部署說明
         此版本已準備好部署到生產環境。
-        
-        ### 本地測試
-        \`\`\`bash
-        npm run preview
-        \`\`\`
         EOF
     
-    # 步驟11: 提交更改
+    # 步驟9: 提交更改
     - name: Commit changes
       run: |
+        TAG_NAME=${GITHUB_REF#refs/tags/}
+        
+        # 添加所有文件
         git add .
-        git commit -m "Release ${GITHUB_REF#refs/tags/}
+        
+        # 提交
+        git commit -m "Release $TAG_NAME
 
         - 構建時間: $(date -u '+%Y-%m-%d %H:%M:%S UTC')
-        - 基於tag: ${GITHUB_REF#refs/tags/}
-        - 提交信息: ${{ steps.tag_info.outputs.tag_message }}"
+        - 基於tag: $TAG_NAME
+        - 自動構建並部署到release分支" || echo "No changes to commit"
     
-    # 步驟12: 推送到release分支
+    # 步驟10: 推送到release分支
     - name: Push to release branch
       run: |
+        echo "Pushing to release branch..."
         git push origin release
     
-    # 步驟13: 創建GitHub Release
+    # 步驟11: 創建GitHub Release
     - name: Create GitHub Release
       uses: actions/create-release@v1
       env:
@@ -157,11 +151,12 @@ jobs:
         draft: false
         prerelease: false
     
-    # 步驟14: 輸出構建信息
+    # 步驟12: 輸出構建信息
     - name: Build summary
       run: |
+        TAG_NAME=${GITHUB_REF#refs/tags/}
         echo "🎉 構建完成！"
-        echo "📦 Tag: ${GITHUB_REF#refs/tags/}"
+        echo "📦 Tag: $TAG_NAME"
         echo "🌿 Release分支: release"
         echo "📁 構建文件: dist/"
         echo "📋 發布說明: RELEASE_NOTES.md"
