fix: 修復GitHub Pages靜態資源路徑問題
- 更新vite.config.ts添加正確的base路徑配置
- 生產環境使用/Mahjong-Point-Counting/路徑
- 開發環境使用根路徑保持不變
- 創建詳細的資源路徑問題解決指南
- 確保CSS、JS等靜態資源能正確載入

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -35,10 +35,7 @@ jobs:
     
     # 步驟4: 構建項目
     - name: Build project
-      run: |
-        # 設置GitHub Pages的base路徑
-        echo "VITE_BASE_PATH=/Mahjong-Point-Counting/" >> $GITHUB_ENV
-        npm run build
+      run: npm run build
     
     # 步驟5: 配置Git
     - name: Configure Git
